Revert to using two endpoints for customer price and article price